--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,8 @@
     android:orientation="vertical"
     android:padding="15dp">
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,9 +28,31 @@
             android:text="오리"
             android:layout_margin="10dp"/>
 
-
+        <Button
+            android:id="@+id/viewPhotoBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="사진 크게 보기"/>
 
     </LinearLayout>
+
+
+
+    <ImageView
+        android:id="@+id/firstImg"
+        android:layout_width="120dp"
+        android:layout_height="100dp"
+        android:src="@mipmap/ic_launcher"
+        android:scaleType="centerCrop"/>
+
+    <ImageView
+        android:id="@+id/secondImg"
+        android:layout_width="120dp"
+        android:layout_height="100dp"
+        android:src="@mipmap/ic_launcher"
+        android:scaleType="centerCrop"/>
+
+
 
 
 </LinearLayout>
